# WinLux

./: .gitignore  AGENTS.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  index.html  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml  winget.yml
scripts/: check-i18n.mjs  generate-windows-icons.mjs  tauri-release.mjs  tauri-with-version.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/nsis/: installer-hooks.nsh  installer-template.nsi
src-tauri/src/: commands.rs  i18n.rs  main.rs  main_window.rs  models.rs  tray.rs
src/lib/: i18n.ts  tauri.ts
src/locales/: tray-texts.json
src/locales/ar-SA/: common.json
src/locales/bg-BG/: common.json
src/locales/cs-CZ/: common.json
src/locales/da-DK/: common.json
src/locales/de-DE/: common.json
src/locales/el-GR/: common.json
src/locales/en-US/: common.json
src/locales/es-419/: common.json
src/locales/es-ES/: common.json
src/locales/fi-FI/: common.json
src/locales/fr-FR/: common.json
src/locales/hu-HU/: common.json
src/locales/id-ID/: common.json
src/locales/it-IT/: common.json
src/locales/ja-JP/: common.json
src/locales/ko-KR/: common.json
src/locales/nb-NO/: common.json
src/locales/nl-NL/: common.json
src/locales/pl-PL/: common.json
src/locales/pt-BR/: common.json
src/locales/pt-PT/: common.json
src/locales/ro-RO/: common.json
src/locales/ru-RU/: common.json
src/locales/sv-SE/: common.json
src/locales/th-TH/: common.json
(+5 files in other folders)
