[package]
name = "winlux"
version = "0.1.0"
edition = "2021"
authors = ["you"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
